# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../multimodalinput_mini.gni")
mmi_container_ipc_manager_path = "${mmi_path}/service/container_ipc_manager"

ohos_source_set("mmi_container_ipc_manager") {
  part_name = "input"
  subsystem_name = "multimodalinput"
  sources =
      [ "${mmi_container_ipc_manager_path}/src/container_ipc_manager.cpp" ]

  include_dirs = [
    "${mmi_container_ipc_manager_path}/include",
    "${mmi_path}/interfaces/native/innerkits/event/include",
    "${mmi_path}/util/common/include",
  ]

  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
}
