# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../multimodalinput_mini.gni")

config("fingersense_wrapper_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "${mmi_path}/service/fingersense_wrapper/include",
  ]
}

ohos_shared_library("fingersense_wrapper") {
  sources = [
    "src/fingersense_manager.cpp",
  ]

  configs = [ ":fingersense_wrapper_config" ]

  deps = [
    "${mmi_path}/util:libmmi-util",
  ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
  ]

  part_name = "input"
  subsystem_name = "multimodalinput"
}
