# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimodalinput/input/multimodalinput_mini.gni")

config("input_provider_public_config") {
  include_dirs = [
    "include",
  ]
}

ohos_source_set("input_provider") {
  include_dirs = [
    "include",
  ]
  sources = [
    "src/event_handler_manager.cpp",
    "src/event_queue_manager.cpp",
    "src/event_queue.cpp",
    "src/hdf_input_device.cpp",
    "src/hdf_input_provider.cpp",
    "src/stub.cppv
    "src/touch_screen_event_handler.cpp",
  ]

  public_configs = [ ":input_provider_public_config" ]

  deps = [
    "${mmi_path}/util:libmmi-util",
  ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_input:hdi_input",
    "hiviewdfx_hilog_native:libhilog",
  ]
}
