# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimodalinput/input/multimodalinput_mini.gni")
mmi_mmi_sign_helper_path = "${mmi_path}/service/sign"

config("mmi_mmi_sign_helper_public_config") {
  include_dirs = [
    "${mmi_mmi_sign_helper_path}/include",
    "${mmi_path}/util/common/include",
  ]
}

config("mmi_mmi_sign_helper_config") {
  include_dirs = [
    "${mmi_mmi_sign_helper_path}/include",
    "${mmi_path}/util/common/include",
  ]
}

ohos_source_set("mmi_mmi_sign_helper") {
  part_name = "input"
  sources = [
    "${mmi_mmi_sign_helper_path}/src/mmi_sign_helper.cpp",
  ]

  configs = [ ":mmi_mmi_sign_helper_config" ]
  public_configs = [ ":mmi_mmi_sign_helper_public_config" ]

  cflags = [ "-DOHOS_BUILD" ]

  deps = [ "//third_party/openssl:libcrypto_static" ]

  external_deps = [
    "utils_base:utils",
    "hiviewdfx_hilog_native:libhilog",
  ]
}
