import("//build/ohos.gni")

ohos_executable("input_demo_v2") {
  sources = [
    "src/WindowStateManager.cpp",
    "src/IEventLooper.cpp",
    "src/SeatManager.cpp",
    "src/TouchPadSingleTapTransformer.cpp",
    "src/RelEventHandler.cpp",
    "src/LinuxInputDeviceDiscoverer.cpp",
    "src/KernelEventBase.cpp",
    "src/LogicalDisplayState.cpp",
    "src/main.cpp",
    "src/TouchScreenSeat.cpp",
    "src/EventDispatcher.cpp",
    "src/InstanceCreator.cpp",
    "src/EventLooper.cpp",
    "src/IInputDeviceDiscoverer.cpp",
    "src/KernelEventHandlerBridge.cpp",
    "src/Log.cpp",
    "src/IdGenerator.cpp",
    "src/InputContext.cpp",
    "src/InputEvent.cpp",
    "src/KernelKeyEventHandler.cpp",
    "src/IInputDevice.cpp",
    "src/TouchPadEventTransformer.cpp",
    "src/RelEventCollector.cpp",
    "src/AbsEventCollector.cpp",
    "src/PointerEvent.cpp",
    "src/IKernelEventHandler.cpp",
    "src/InputDeviceManager.cpp",
    "src/ISeatManager.cpp",
    "src/KernelKeyEvent.cpp",
    "src/InputWindowState.cpp",
    "src/IoUtils.cpp",
    "src/AutoHelper.cpp",
    "src/KeyEventCollector.cpp",
    "src/IEventTransformer.cpp",
    "src/ITouchScreenSeat.cpp",
    "src/PhysicalDisplayState.cpp",
    "src/Seat.cpp",
    "src/EnumUtils.cpp",
    "src/AbsEvent.cpp",
    "src/TimeUtils.cpp",
    "src/InputDevice.cpp",
    "src/AbsEventHandler.cpp",
    "src/KeyEvent.cpp",
    "src/RelEvent.cpp",
    "src/IEventHandler.cpp",
    "src/IoctlUtils.cpp",
    "src/TouchPadSingleMoveTransformer.cpp",
    "src/Robot.cpp",
  ]
  include_dirs = [ "include" ]
  #deps = [ "//third_party/eudev:libudev" ]
  subsystem_name = "multimodalinput"
  part_name = "input"
}