# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimodalinput/input/multimodalinput_mini.gni")

config("mmi_stack_dumper_helper_public_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
  ]
}

ohos_source_set("mmi_stack_dumper_helper") {
  public_configs = [ ":mmi_stack_dumper_helper_public_config" ]

  sources = [
    "src/stack_dumper_helper.cpp",
  ]

  external_deps = [
    "c_utils:utils",
    "faultloggerd:lib_dfx_dump_catcher",
  ]

  part_name = "input"
  subsystem_name = "multimodalinput"
}