/*
 * Copyright (c) 2022 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

import("//build/ohos.gni")
import("//build/test.gni")
import("//foundation/multimodalinput/input/multimodalinput_mini.gni")

ohos_unittest("device_profile_adapter_test") {
  module_out_path = "multimodalinput/unit_out"
  sources = [ "device_profile_adapter_test.cpp" ]

  include_dirs = [
    "//foundation/multimodalinput/input/service/input_device_cooperate/include",
    "//foundation/deviceprofile/device_profile_core/interfaces/innerkits/core/include",
  ]

  deps = [
    "${mmi_path}/frameworks/proxy:libmmi-client",
    "${mmi_path}/service:libmmi-server",
    "${mmi_path}/util:libmmi-util",
    "//foundation/deviceprofile/device_info_manager/interfaces/innerkits/core:distributed_device_profile_client",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "drivers_interface_input:hdi_input",
    "hiviewdfx_hilog_native:libhilog",
    "utils_base:utils",
    "dsoftbus:softbus_client",
  ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "input"
  subsystem_name = "multimodalinput"
}
