import("//build/ohos.gni")
import("//build/test.gni")
import("//foundation/multimodalinput/input/multimodalinput_mini.gni")
module_output_path = "multimodalinput/moduletest_out"

ohos_moduletest("api-test-out") {
  module_out_path = module_output_path
  include_dirs = [
    "//foundation/multimodalinput/input/test/moduletest/include"
  ]

  sources = [
    "telephone_events_handler_api_test.cpp",
    "speech_events_api_test.cpp",
    "media_events_handler_api_test.cpp",
    "keyboard_events_api_test.cpp",
    "rotation_events_api_test.cpp",
    "touch_events_api_test.cpp",
    "mouse_events_api_test.cpp",
    "stylus_events_api_test.cpp",
    "key_events_api_test.cpp",
    "multimodal_events_api_test.cpp",
    "system_events_handler_api_test.cpp",
    "common_events_handler_api_test.cpp",
    "manipulation_events_api_test.cpp",
    "multimodal_events_handler_api_other_test.cpp",
    "multimodal_events_handler_api_test.cpp"
  ]

  cflags = [
    "-DOHOS_BUILD",
  ]

  if (is_mmi_have_debug) {
    cflags += [
      "-DOHOS_BUILD_MMI_DEBUG",
    ]
  }

  if (is_mmi_have_libinput) {
    cflags += [
      "-DOHOS_BUILD_LIBINPUT",
    ]
  }

  if (is_mmi_have_hdf) {
    cflags += [
      "-DOHOS_BUILD_HDF",
    ]
  }

  if (is_mmi_have_ai) {
    cflags += [
      "-DOHOS_BUILD_AI",
    ]
  }

  deps = [
    "${mmi_path}/frameworks/util:libmmi-util",
    "${mmi_path}/frameworks/proxy:libmmi-client",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core:ipc_core"
  ]

  if (is_mmi_have_libinput || is_mmi_have_hdf) {
      deps += [
          "//foundation/multimodalinput/input/patch/diff_libinput_mmi:libinput-third-mmi",
      ]
  }

  external_deps = [
      "hiviewdfx_hilog_native:libhilog"
  ]
}

group("api-test") {
  testonly = true
  deps = [
    ":api-test-out"
  ]
}
