import("//build/ohos.gni")
import("//build/test.gni")
import("//foundation/multimodalinput/input/multimodalinput_mini.gni")
module_output_path = "multimodalinput/moduletest_out"

ohos_moduletest("api-test-out") {
  module_out_path = module_output_path
  include_dirs =
      [ "//foundation/multimodalinput/input/test/moduletest/include" ]

  sources = [
    "common_event_handler_api_test.cpp",
    "key_event_api_test.cpp",
    "keyboard_event_api_test.cpp",
    "manipulation_event_api_test.cpp",
    "media_event_handler_api_test.cpp",
    "mouse_event_api_test.cpp",
    "multimodal_event_api_test.cpp",
    "multimodal_event_handler_api_other_test.cpp",
    "multimodal_event_handler_api_test.cpp",
    "rotation_event_api_test.cpp",
    "speech_event_api_test.cpp",
    "stylus_event_api_test.cpp",
    "system_event_handler_api_test.cpp",
    "telephone_event_handler_api_test.cpp",
    "touch_event_api_test.cpp",
  ]

  cflags = [ "-DOHOS_BUILD" ]

  if (is_mmi_have_debug) {
    cflags += [ "-DOHOS_BUILD_MMI_DEBUG" ]
  }

  if (is_mmi_have_libinput) {
    cflags += [ "-DOHOS_BUILD_LIBINPUT" ]
  }

  if (is_mmi_have_hdf) {
    cflags += [ "-DOHOS_BUILD_HDF" ]
  }

  if (is_mmi_have_ai) {
    cflags += [ "-DOHOS_BUILD_AI" ]
  }

  deps = [
    "${mmi_path}/frameworks/proxy:libmmi-client",
    "${mmi_path}/frameworks/util:libmmi-util",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core:ipc_core",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  if (is_mmi_have_libinput || is_mmi_have_hdf) {
    deps += [ "//foundation/multimodalinput/input/patch/diff_libinput_mmi:libinput-third-mmi" ]
  }

  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
}

group("api-test") {
  testonly = true
  deps = [ ":api-test-out" ]
}
